<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ver_operaciones">

    <TextView
        android:id="@+id/tv_verOperacion_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_verOperacion_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/tv_verOperacion_fechaI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/tv_verOperacion_fechaF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_verTareasProdutivas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tareasProductivas" />

        <Button
            android:id="@+id/btn_verTareasColaborativas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tareasColaborativas" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_verResumenTareas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/resumenTareas" />

        <Button
            android:id="@+id/btn_verTareasImproductivas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tareasImproductivas" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btn_verProductividadDia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/productividadDia" />

    <Button
        android:id="@+id/btn_verEstadistica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/estadistica" />
</LinearLayout>