<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".crear_proyecto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo_pantalla_general"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_crearProyecto_identificador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ident_proy"
            android:inputType="textPersonName"
            android:text="" />

        <EditText
            android:id="@+id/et_crearProyecto_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/desc_proy"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/et_crearProyecto_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nomb_cliente"
            android:inputType="textPersonName"
            android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_crearProyecto_finicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/fecha_inicio"
                android:inputType="date" />

            <ImageButton
                android:id="@+id/ibtn_crearProyecto_calendario"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_calendar" />

            <View
                android:id="@+id/divider4"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/listDivider"
                android:visibility="invisible" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_crearNuevoProyecto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crear" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>